--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- 引入数据校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!-- MybatisPlus代码生成器 -->
         <dependency>
             <groupId>com.baomidou</groupId>
