--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ chat-zen:
     expire: 2
 spring:
   profiles:
-    #    active: prod
-    active: '@environment@'
+    active: prod
+  #    active: '@environment@'
   devtools:
     restart:
       enabled: true
