--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,12 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <!--修改版本-->
+                <version>3.1.0</version>
+            </plugin>
         </plugins>
         <!--单元测试时引用src/main/resources下的资源文件-->
         <testResources>
