--- a/pom.xml
+++ b/pom.xml
@@ -135,9 +135,13 @@
             <id>dev</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
+                <jdk>17</jdk>
             </activation>
             <properties>
                 <environment>dev</environment>
+                <maven.compiler.source>17</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+                <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
             </properties>
         </profile>
         <!-- 生产环境 -->
