--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,20 +27,21 @@ spring:
   rabbitmq:
     addresses: 121.41.122.33
     port: 5672
-    username: guest
-    password: guest
+    username: rabbitmq
+    password: rabbitmq_mY3nw4
     virtual-host: /
   # 配置MySql数据源
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver # 设置驱动程序
     url: jdbc:mysql://121.41.122.33:3306/chat_zen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
     username: root  # 数据库用户名
-    password: QianXun  # 数据库密码
+    password: mysql_mY3nw4  # 数据库密码
   # 配置Redis数据源
   data:
     redis:
       host: 121.41.122.33 # 连接地址
       port: 6379 # 连接端口
+      password: redis_6pGn3p
       jedis:
         pool:
           max-active: 8 # 最大连接数
