--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,31 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+        <!-- Mysql -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <!-- 非编译期间需要 -->
+            <scope>runtime</scope>
+            <version>8.4.0</version>
+        </dependency>
+        <!-- 引入MybatisPlus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+            <version>3.5.7</version>
+        </dependency>
+        <!-- 引入JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <!-- Spring Boot Starter Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- 自动生成GetSet方法 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
