--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### yml config ###
-!**/src/main/resources/application.yml
+src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
