--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8080
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://121.41.122.33:3306/chatzen?useSSL=false # 设置数据库
+    username: root  # 数据库用户名
+    password: mysql_mY3nw4  # 数据库密码
