修改项目目录结构

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+        <!-- 代码生成器 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.7</version>
+        </dependency>
         <!-- Mysql -->
         <dependency>
             <groupId>com.mysql</groupId>
