--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://121.41.122.33:3306/chatzen?useSSL=false # 设置数据库
-    username: chatzen  # 数据库用户名
-    password: EdH38Q4HEsGA77Bs  # 数据库密码
+    username: chat_zen  # 数据库用户名
+    password: ieFiFH2WAwdEYQMi  # 数据库密码
