--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,25 @@ server:
   port: 8080
 
 chat-zen:
+  security:
+    permit-all-path:
+      - /users/**
+      - /http-test/**
+      - /auth/**
   jwt:
     key: chatzen-key
-    expiration: 3600000 # 1 hour - 3600000ms
+    expiration: 172800000 # 48 hour - *ms
 
 spring:
+  # 配置Mysql数据源
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://121.41.122.33:3306/chatzen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
+    url: jdbc:mysql://121.41.122.33:3306/chat_zen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
     username: chat_zen  # 数据库用户名
     password: ieFiFH2WAwdEYQMi  # 数据库密码
+  # 配置Redis数据源
+  data:
+    redis:
+      host: 121.41.122.33 # 连接地址
+      port: 6379 # 连接端口
+      password: redis_6pGn3p
