--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ chat-zen:
       - /http-test/**
       - /auth/**
       - /ws/**
+      - /user/add/**
   jwt:
     # jwt加密key
     key: chatzen-key
@@ -17,12 +18,12 @@ spring:
   # 配置Mysql数据源
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://121.41.122.33:3306/chat_zen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
-    username: chat_zen  # 数据库用户名
-    password: ieFiFH2WAwdEYQMi  # 数据库密码
+    url: jdbc:mysql://127.0.0.1:3306/chatzen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
+    username: root  # 数据库用户名
+    password: root  # 数据库密码
   # 配置Redis数据源
   data:
     redis:
-      host: 121.41.122.33 # 连接地址
+      host: 127.0.0.1 # 连接地址
       port: 6379 # 连接端口
-      password: redis_6pGn3p
+      password: redis_xlpass
