--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,29 @@
     </scm>
     <properties>
         <java.version>21</java.version>
+
     </properties>
     <dependencies>
+        <!-- Flyway Core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
+        <!-- Spring Boot Mail Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!-- 引入雪花ID生成器 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.40</version> <!-- 建议使用最新版本 -->
+        </dependency>
         <!-- 引入Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
