--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8080
-
 chat-zen:
   security:
     # Security认证白名单
@@ -10,70 +7,10 @@ chat-zen:
       - /ws/**
       - /user/login
       - /user/register
-  jwt:
-    # jwt加密key
-    key: chatzen-key
-    expiration: 172800000 # 48 hour - *ms
 
 spring:
-  # 配置Mysql数据源
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/chatzen?useSSL=false&allowPublicKeyRetrieval=true # 设置数据库
-    username: root  # 数据库用户名
-    password: root  # 数据库密码
-  # 配置Redis数据源
-  data:
-    redis:
-      host: 127.0.0.1 # 连接地址
-      port: 6379 # 连接端口
-      password: redis_xlpass
-  flyway:
-    # 启用或禁用 Flyway, 自动管理数据库表结构
-    enabled: true
-
-
-
-  mail: # 邮件服务器地址 (网易163邮箱)
-      host: smtp.163.com
-      # 如果是126邮箱，则使用: smtp.126.com
-
-      # 邮件服务器端口 (SSL加密端口为465)
-      port: 465
-
-      # 你的邮箱账号 (发件人邮箱)
-      username: QianXun_XianLin@163.com
-
-      # 你的邮箱授权码 (注意：不是登录密码！)
-      password: LQu3M38vgEXJiVaE
-
-
-      # 协议
-      protocol: smtp
-
-      # 编码格式
-      default-encoding: UTF-8
-
-      # SSL 配置 (网易邮箱推荐使用SSL)
-      properties:
-        mail:
-          smtp:
-            # 启用SSL加密
-            ssl:
-              enable: true
-              required: true
-            # 启用身份验证
-            auth: true
-            # 设置socket工厂
-            socketFactory:
-              port: 465
-              class: javax.net.ssl.SSLSocketFactory
-              fallback: false
-
-
-# 配置雪花算法
-snowflake:
-  worker-id: 1   # 每个实例的ID需要不同
-  datacenter-id: 1
+  profiles:
+    # 加载不同环境的配置文件
+    active: dev
 
 
