功能增强：添加用户角色系统、环境变量配置、安全增强和Redis序列化优化

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- Jackson JSR-310 for Java 8 Time support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- 自动生成GetSet方法 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
