--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,12 @@
+server:
+  port: ${SERVER_PORT:8080}
+
 chat-zen:
+  jwt:
+    # jwt加密key - 从环境变量获取
+    key: ${CHATZEN_JWT_KEY:chatzen-key}
+    # 默认过期时间 48 小时
+    expiration: ${CHATZEN_JWT_EXPIRATION:172800000}
   security:
     # Security认证白名单
     permit-all-path:
@@ -12,5 +20,38 @@ spring:
   profiles:
     # 加载不同环境的配置文件
     active: dev
+  mail:
+    # 邮件服务器地址 (网易163邮箱)
+    host: ${MAIL_HOST:smtp.163.com}
+    # 邮件服务器端口 (SSL加密端口为465)
+    port: ${MAIL_PORT:465}
+    # 邮箱账号
+    username: ${MAIL_USERNAME:QianXun_XianLin@163.com}
+    # 邮件服务器密码从环境变量获取
+    password: ${MAIL_PASSWORD:LQu3M38vgEXJiVaE}
+    # 协议
+    protocol: smtp
+    # 编码格式
+    default-encoding: UTF-8
+    # SSL 配置
+    properties:
+      mail:
+        smtp:
+          # 启用SSL加密
+          ssl:
+            enable: ${MAIL_SSL_ENABLE:true}
+            required: ${MAIL_SSL_REQUIRED:true}
+          # 启用身份验证
+          auth: ${MAIL_AUTH:true}
+          # 设置socket工厂
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
+
+# 配置雪花算法
+snowflake:
+  worker-id: ${SNOWFLAKE_WORKER_ID:1}
+  datacenter-id: ${SNOWFLAKE_DATACENTER_ID:1}
 
 
